--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
-PORT=8000
+PORT=10000
 CLIENT_URL=http://localhost:3000
+DATABASE=mongodb+srv://luis_febro:ZSVw$T!EjA8fubM@seo-blogger-cluster.jvlpi.mongodb.net/data?retryWrites=true&w=majority
