--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=10000
 CLIENT_URL=http://localhost:3000
 DATABASE=mongodb+srv://luis_febro:ZSVw$T!EjA8fubM@seo-blogger-cluster.jvlpi.mongodb.net/data?retryWrites=true&w=majority
+JWT_SECRET=FSDAKL124321JKL321312J321LK321J3LK21
