--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.6.10",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
+    "shortid": "^2.2.15",
     "slugify": "^1.4.5",
     "string-strip-html": "^6.0.3"
   }
