--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.5.3",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.6.0"
