frontend with nextjs - tags and categories part 10

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+APP_NAME="Seo blogger"
 PORT=10000
 CLIENT_URL=http://localhost:3000
 DATABASE=mongodb+srv://luis_febro:ZSVw$T!EjA8fubM@seo-blogger-cluster.jvlpi.mongodb.net/data?retryWrites=true&w=majority
