--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "next": "^9.5.3",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
     "reactstrap": "^8.6.0"
   },
   "proxy": "http://localhost:10000"
