fullstack - auth, blogs 15

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ PORT=10000
 CLIENT_URL=http://localhost:3000
 DATABASE=mongodb+srv://luis_febro:ZSVw$T!EjA8fubM@seo-blogger-cluster.jvlpi.mongodb.net/data?retryWrites=true&w=majority
 JWT_SECRET=FSDAKL124321JKL321312J321LK321J3LK21
+JWT_RESET_PASSWORD=AFSDFD1223123213213FSDFSDFSDAF
+JWT_ACCOUNT_ACTIVATION=OL321OH43OU14321431431FY4I31ÇC341I
+EMAIL_FROM=noreplay@seoblogger.com
+EMAIL_TO=mr.febro@gmail.com
+SEND_GRID_KEY=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
